# rust-nano_services

./: .gitignore  Cargo.toml  docker-compose.yml  package-lock.json  tasks.json
core/: Cargo.toml
core/src/: enums.rs  main.rs  structs.rs
core/src/api/basic_actions/: create.rs  get.rs
core/src/structs/: done.rs  pending.rs
dal/: Cargo.toml
dal/src/: json_file.rs
glue/: Cargo.toml
glue/src/: errors.rs  lib.rs  token.rs
glue/src/logger/: elastic_actor.rs  logger.rs  mod.rs
glue/src/logger/network_wrappers/: actix_web.rs
ingress/: Cargo.toml  index.html
ingress/frontend/: package-lock.json  package.json  serve.json
ingress/frontend/public/: bundle.js  bundle.js.map  index.html
ingress/frontend/rust-interface/: Cargo.toml
ingress/frontend/rust-interface/src/: lib.rs
ingress/frontend/src/: index.tsx
ingress/frontend/src/api/: create.ts  delete.ts  get.ts  update.ts  utils.ts
ingress/frontend/src/components/: CreateItemForm.tsx  ToDoItem.tsx
ingress/frontend/to_do/rust-interface/: Cargo.toml
ingress/scripts/: run_server.sh  run_tests.sh
ingress/src/: main.rs
nanoservices/auth/core/: Cargo.toml
nanoservices/auth/core/src/api/auth/: login.rs
nanoservices/auth/core/src/api/users/: create.rs  get.rs
nanoservices/auth/dal/: Cargo.toml
nanoservices/auth/dal/migrations/: 20260126123031_initial-setup.sql
nanoservices/auth/dal/src/: lib.rs  migrations.rs
nanoservices/auth/dal/src/connections/: sqlx_postgres.rs
nanoservices/auth/dal/src/users/: schema.rs
nanoservices/auth/dal/src/users/transactions/: create.rs  get.rs
nanoservices/auth/kernel/: Cargo.toml
nanoservices/auth/kernel/src/api/users/: get.rs
nanoservices/auth/kernel/src/user_session/: descriptors.rs  schema.rs
nanoservices/auth/kernel/src/user_session/transactions/: get.rs  login.rs
nanoservices/auth/networking/actix_server/: Cargo.toml
nanoservices/auth/networking/actix_server/src/: extract_auth.rs  main.rs
nanoservices/core/: Cargo.toml
nanoservices/core/src/: enums.rs
nanoservices/core/src/api/basic_actions/: create.rs  delete.rs  get.rs  update.rs
nanoservices/dal/: Cargo.toml
nanoservices/dal/src/: json_file.rs  lib.rs
nanoservices/dal/src/connections/: sqlx_postgres.rs
nanoservices/dal/src/to_do_items/: mod.rs  schema.rs
nanoservices/dal/src/to_do_items/transactions/: create.rs  delete.rs
nanoservices/networking/actix_server/: Cargo.toml
nanoservices/networking/actix_server/src/: main.rs
nanoservices/to_do/core/: Cargo.toml
nanoservices/to_do/dal/: Cargo.toml
nanoservices/to_do/dal/migrations/: 20260125074358_initial-setup.sql  20260201211525_adding-user-connection.sql
nanoservices/to_do/dal/src/: lib.rs  migrations.rs
nanoservices/to_do/dal/src/to_do_items/: schema.rs
nanoservices/to_do/dal/src/to_do_items/transactions/: create.rs  delete.rs  get.rs  update.rs
nanoservices/to_do/networking/actix_server/: Cargo.toml
nanoservices/to_do/networking/actix_server/src/: main.rs
nanoservices/to_do/networking/actix_server/src/api/: mod.rs
nanoservices/to_do/networking/actix_server/src/api/basic_actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
nanoservices/to_do/scripts/: add_migrations.sh  test_server_com.sh
nanoservices/user-session-cache/cache-client/: Cargo.toml
nanoservices/user-session-cache/cache-client/src/: lib.rs
nanoservices/user-session-cache/cache-module/: Dockerfile
nanoservices/user-session-cache/cache-module/src/: lib.rs  user_session.rs
nanoservices/user-session-cache/cache-module/src/processes/: login.rs  logout.rs  update.rs
networking/actix_server/: Cargo.toml
networking/actix_server/src/: main.rs
networking/actix_server/src/api/basic_actions/: get.rs  mod.rs
scripts/: run_tests.sh  wait_for_database.sh
(+16 files in other folders)
