[workspace]
resolver = "2"

members = [
    "glue",
    "ingress",
    "nanoservices/to_do/core",
    "nanoservices/auth/core",
    "nanoservices/auth/dal",
    "nanoservices/to_do/dal",
    "nanoservices/to_do/networking/actix_server",
    "nanoservices/auth/networking/actix_server",
    "ingress/frontend/to_do/rust-interface",
]

