[package]
name = "glue"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
futures = "0.3.30"
jsonwebtoken = "9.3.1"
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"


[features]
actix = ["dep:actix-web"]