[package]
name = "to-do-dal"
version = "0.1.0"
edition = "2024"


[features]
json-file = ["serde_json", "serde"]
sqlx-postgres = ["sqlx", "once_cell"]
default = ["sqlx-postgres"]

[dependencies]
serde = { version="1.0.197", optional = true }
glue={path = "../../glue"}

# for json-file
serde_json ={ version="1.0.114", optional = true }

# for sqlx-postgres
sqlx = { version = "0.8.3", features = ["postgres", "json"], optional = true }
once_cell = { version = "1.19.0", optional = true}